# course-project-matveevaolga

./: .env.example  .gitattributes  .hadolint.yaml  .pre-commit-config.yaml  .trivyignore  Dockerfile  README.md  SECURITY.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci-cd.yml  ci-p11-dast.yml  ci-p12-iac-container.yml  ci.yml  rules.yml  sast-secrets.yml  security.yml
EVIDENCE/: README.md
EVIDENCE/P09/: grype-report-20251210-192152.json  pip-audit-output.txt  pip-audit-report-20251210-192213.json  policy_check.md  sbom-20251210-192149-233fdc88f75edef1d0f2129ad4185e49e036f3ac.json  sca_summary.md
EVIDENCE/P10/: README.md  sast_summary.md  security-summary.md  semgrep-custom.sarif  semgrep.sarif
EVIDENCE/P11/: P11_ANALYSIS.md  zap_baseline.html  zap_baseline.json
EVIDENCE/P12/: hadolint_report.json  hardening_summary.md  trivy_findings.md  trivy_report.json
app/: main.py
app/core/: cache.py  errors.py  metrics.py  security.py
app/docs/: ADR-001-caching.md  ADR-002-in-memory-storage.md  ADR-003-stateless-architecture.md
app/features/: models.py  routes.py  store.py
docs/: DFD.md  NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md  RISKS.md  STRIDE.md
policy/: waivers.yml
security/: .gitleaks.toml  checkov.yaml  hadolint.yaml  triage-report.md
security/semgrep/: rules.yml
tests/: test_cache.py  test_errors.py  test_features.py  test_health.py  test_pii_masking.py  test_security.py
